# internal/types/cpop/batch_mint_n_f_ts_parameters.go
@@ -1,0 +1,95 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package cpop
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+
+	"github.com/hzbay/chain-bridge/internal/types"
+)
+
+// NewBatchMintNFTsParams creates a new BatchMintNFTsParams object
+// no default values defined in spec.
+func NewBatchMintNFTsParams() BatchMintNFTsParams {
+
+	return BatchMintNFTsParams{}
+}
+
+// BatchMintNFTsParams contains all the bound params for the batch mint n f ts operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters batchMintNFTs
+type BatchMintNFTsParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*NFT batch mint request
+	  Required: true
+	  In: body
+	*/
+	Request *types.BatchMintNFTsBody
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewBatchMintNFTsParams() beforehand.
+func (o *BatchMintNFTsParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body types.BatchMintNFTsBody
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("request", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("request", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Request = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("request", "body", ""))
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *BatchMintNFTsParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// request
+	// Required: true
+
+	// body is validated in endpoint
+	//if err := o.Request.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
